static/src/scss/custom_styles.scss
/* 1. Fix grey overlay in calendar view of Leave/My Time/Dashboard
Override the Odoo core style for thead background.
Use class `.fc-dayGrid-view` to be more specific.
*/
.fc-dayGrid-view thead {
    background-color: transparent !important;
}

// 2. Dark Mode Fixes
/* a) App module names have a white background.
Make background transparent.
*/
.oe_module_name {
  background-color: transparent !important;
}

/* b) Discuss Channel name background is unnecessary.
- Inherit background color.
- Set input color as white.
- Inherit divider color.
- Make reaction backgrounds dark.
*/
.knk_night_mode .o_input {
  background-color: inherit;
  color: white !important;
}
.knk_night_mode .border-start {
  border-left-color: inherit !important;
}
.knk_night_mode button.o-mail-MessageReaction.btn {
  background-color: slategray;
}

/* c) Folder icon to inherit color.
Was previously being set to a fixed dark color.
Gets overridden if not set as !important
*/
.text-primary {
  color: inherit !important;
}

/* d) Kanban title inherit color.
Primarily affecting Recruitment module.
Was previously being set to a fixed dark color.
*/
.o_primary {
  color: inherit !important;
}

/* e) Inherit danger text color.
Primarily seen in Attendance module.
##TODO Use more generic selector if possible. Works as-is.
*/
body.knk_night_mode .o_list_renderer .o_list_table tbody > tr > td:not(.o_list_record_selector):not(.o_handle_cell):not(.o_list_button):not(.o_list_record_remove):not(.o_list_record_open_form_view) {
    color: inherit;
}

/* f) Time Off/Leave Module Colors
*/
// Calendar Background
.knk_night_mode .o_timeoff_calendar {
  background-color: #242733;
}
.o_calendar_renderer {
  background-color: inherit;
}
.o.timeoff_dashboard {
  background-color: inherit;
}
// Overview Calendar text
.knk_night_mode .fc-day-grid-event .fc-content {
    color: inherit;
}

/* g) No Content Background color.
Affects all modules.
*/
.o_view_nocontent {
  background-image: inherit;
}
.o_view_sample_data .o_nocontent_help {
  background-color: white;
  box-shadow: none;
}

/* h) MK App Icon Background
Affects App Drawer
*/
.o_navbar_apps_menu.show .dropdown-menu .o_app > a .mk_app_icon {
  background-color: inherit;
}

/* i) Command Pallete selector opacity
Too bright in dark mode (0.65). Drop to 0.5 works well in dark and light mode.
*/
.o_command_palette_listbox .o_command.focused {
  background: rgba(150,150,150,0.3);
}

/* j) HR Leave right column background
Original color is too bright. Make it a neutral grey with low opacity so it works with both light and dark mode.
*/
.o_hr_leave_form .o_hr_leave_content .col_right {
  background-color: rgba(150,150,150,0.1);
}

/* k) Discuss chat window
*/
// Discuss chat when minimized.
// Make chat subject text white.
.knk_night_mode .bg-100 {
  color: white;
}
// Discuss chat dropdown menu.
// Make text white.
.knk_night_mode .dropdown-menu {
  color: white;
}

/* l) URL text color.
*/
// Set all dark mode links color
.knk_night_mode a {
  color: inherit !important;
}
// Text field link color
.o_field_html a:not(.btn) {
  color: #008f8c !important;
}
// Breadcrumb link color
.knk_night_mode .o_control_panel .breadcrumb .breadcrumb-item:not(.active) {
  color: #8bc6e6;
}
// Fix Command Pallete text
.o_command_palette_listbox .o_command_hotkey {
  color: inherit;
}
// Set default text for Night Mode
.knk_night_mode {
  color: white;
}
// Set colors to inherit instead of white
// Not sure how useful this is.
// #TODO: Remove
/*
.knk_night_mode h1, .knk_night_mode .h1, .knk_night_mode h2, .knk_night_mode .h2, .knk_night_mode h3, .knk_night_mode .h3, .knk_night_mode h4, .knk_night_mode .h4, .knk_night_mode h5, .knk_night_mode .h5, .knk_night_mode h6, .knk_night_mode .h6, .knk_night_mode label, .knk_night_mode b, .knk_night_mode p {
  color: inherit;
}
*/

/* m) OHMS Dashboard
*/
// Dashboard Background
.knk_night_mode .oh_dashboards {
  background-color: #2b3840 !important;
}
// Dashboard Cards
// General cards, graphs, and notifications
.knk_night_mode .hr-chart-1, .knk_night_mode .hr_notification,
.knk_night_mode .oh-card {
  background-color: #354859 !important;
  color: aliceblue;
}
// Additional cards: leave manager, stat widgets
.knk_night_mode .leave-manager, .knk_night_mode .stat-widget-one{
  background-color: #354859;
}
.knk_night_mode .stat-digit {
  color: aliceblue !important;
}

/* x) Miscellaneous fixes
*/
// Set generic night mode background
.knk_night_mode .bg-view, .knk_night_mode .text-bg-view {
  background-color: #242733 !important;
}
// Button color
.knk_night_mode .btn-light {
  background-color: lightgrey;
}

